[package]

name = "yaxpeax-pic18"
version = "0.0.1"
authors = [ "iximeow <me@iximeow.net>" ]
license = "0BSD"
repository = ""
description = """
A rust pic18 decoder
"""

[dependencies]
yaxpeax-arch = { path = "../../yaxpeax-arch" }
"serde" = "*"
"serde_derive" = "*"

[[test]]
name = "test"
path = "test/test.rs"

[features]
default = []

use-serde = []
