[package]

name = "yaxpeax-pic18"
version = "0.0.2"
authors = [ "iximeow <me@iximeow.net>" ]
license = "0BSD"
repository = "http://git.iximeow.net/yaxpeax-pic18/"
description = "pic18 decoders for the yaxpeax project"

[dependencies]
yaxpeax-arch = { version = "0.0.3", default-features = false, features = [] }
"serde" = { version = "1.0", optional = true }
"serde_derive" = { version = "1.0", optional = true }

# [[test]]
# name = "test"
# path = "test/test.rs"

[features]
default = []

use-serde = []
